# ot-harjoitusty-

./: README.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  .gitignore
laskarit/viikko2/unicafe/src/tests/: kassapaate__test.py  maksukortti_test.py
laskarit/viikko3/: markdown.md
miinaharava/: .pylintrc  pyproject.toml  tasks.py
miinaharava/dokumentaatio/: arkkitehtuurikuvaus.md  changelog.md  käyttöohje.md  tekoälykäyttö.md  testi.md  työaikakirjanpito.md  vaatimusmaarittely.md
miinaharava/src/: Field.py  MineField.py  index.py  tkDeciratir.py  tk_deciratir.py
miinaharava/src/enteties/: Field.py  MineFieldEasy.py  MineFieldHard.py  MineFieldMedium.py  field.py  filed_start.py  mine_field_fasy.py  mine_field_hard.py  mine_field_medium.py
miinaharava/src/tests/: field_start_test.py  field_test.py  mine_field_easy_test.py  mine_field_hard_test.py  mine_field_medium_test.py  tkDecatir_test.py  tk_decatir_test.py
